--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,17 @@ jobs:
     name: Build our App
     runs-on: ubuntu-latest
     steps:
-      # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
+        - name: Pull Code
+        - uses: actions/checkout@v2
+        - name: Print Current Directory
+          run: pwd
+        - name: List Files in Directory
+          run: ls
+
+              # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
       #- name: Hello world
       #  uses: actions/hello-world-javascript-action@v1
       # with:
       #    who-to-greet: 'Mona the Octocat'
       # id: hello
       # This step prints an output (time) from the previous step's action.
-      - name: Print Current Directory
-        run: pwd
-      - name: List Files in Directory
-        run: ls
