--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
           run: pwd
         - name: List Files in Directory
           run: ls
+        - name: Check Dotnet Cli
+          run: dotnet
+        - name: Check npm 
+          run: npm
 
       # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
       #- name: Hello world
